[gd_scene load_steps=10 format=3 uid="uid://cvl3hi0v46wqh"]

[ext_resource type="Script" uid="uid://batty26g32iqq" path="res://UI/UI popups/debug_popup.gd" id="1_risdp"]
[ext_resource type="FontFile" uid="uid://dh3lo7lghhs8x" path="res://UI/Thin sans.ttf" id="3_4u034"]
[ext_resource type="Texture2D" uid="uid://imjitgjexxki" path="res://UI/Themes/woody/wood_ui.png" id="4_4h7fb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_72ch2"]
texture = ExtResource("4_4h7fb")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 16.0
expand_margin_top = 8.0
region_rect = Rect2(192, 512, 128, 124)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t50lu"]
texture = ExtResource("4_4h7fb")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 16.0
expand_margin_top = 8.0
region_rect = Rect2(192, 512, 128, 124)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iw52e"]
texture = ExtResource("4_4h7fb")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
region_rect = Rect2(192, 672, 128, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n3bvu"]
texture = ExtResource("4_4h7fb")
texture_margin_left = 14.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(32, 32, 128, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4217v"]
texture = ExtResource("4_4h7fb")
texture_margin_left = 14.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(512, 192, 128, 128)

[sub_resource type="Theme" id="Theme_lxjh1"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("3_4u034")
Button/styles/hover = SubResource("StyleBoxTexture_72ch2")
Button/styles/normal = SubResource("StyleBoxTexture_t50lu")
Button/styles/pressed = SubResource("StyleBoxTexture_iw52e")
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("3_4u034")
Panel/styles/panel = SubResource("StyleBoxTexture_n3bvu")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_4217v")

[node name="DebugPopup" type="Control"]
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_risdp")

[node name="Control" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lxjh1")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="Control" parent="Control/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CloseMenu" type="Button" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "X"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -30.0
offset_right = 87.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CategoryButtons" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimalButton" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/CategoryButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Animal"
autowrap_mode = 2
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="ActionsButton" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/CategoryButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Actions"
autowrap_mode = 2
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="MonitorsButton" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/CategoryButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Monitors"
autowrap_mode = 2
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="MainContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="AnimalMenuContainer" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/AnimalMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/AnimalMenuContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/AnimalMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/AnimalMenuContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="AnimalList" type="GridContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/AnimalMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2

[node name="ActionMenuContainer" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="ActionList" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DebugAddMoney" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Add 1000$"

[node name="DebugSpeedTime" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Speed up time"

[node name="DebugToggleDay" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle day"

[node name="DebugUnlockEverything" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Unlock all"

[node name="DebugRemovePeeps" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/ActionMenuContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Remove peeps"

[node name="MonitorsContainer" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/MonitorsContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/MonitorsContainer/MarginContainer"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer/MainContainer/MonitorsContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
